cabal-version:      2.4
name:               Cea
version:            0.1.0.0

-- synopsis:
-- description:
-- bug-reports:
-- license:
author:             mmzk1526
maintainer:         yc4120@ic.ac.uk
extra-source-files: CHANGELOG.md

executable cea
    ghc-options:
        -O2
    main-is: Main.hs
    other-modules:
        Cea.Pointer,
        Cea.Pointer.Unsafe
    default-extensions:
        BlockArguments,
        DataKinds,
        DefaultSignatures,
        DeriveAnyClass,
        DeriveGeneric,
        DerivingStrategies,
        FlexibleContexts,
        FlexibleInstances,
        InstanceSigs,
        KindSignatures,
        GeneralizedNewtypeDeriving,
        MultiParamTypeClasses,
        RankNTypes,
        ScopedTypeVariables,
        TypeApplications,
        TypeOperators
    build-depends:
        Cea,
        base,
        transformers >=0.5
    hs-source-dirs:   src
    default-language: Haskell2010

library
    exposed-modules:
        Cea.Pointer,
        Cea.Pointer.Unsafe
    -- other-modules:
    default-extensions:
        BlockArguments,
        DataKinds,
        DefaultSignatures,
        DeriveAnyClass,
        DeriveGeneric,
        DerivingStrategies,
        FlexibleContexts,
        FlexibleInstances,
        InstanceSigs,
        KindSignatures,
        GeneralizedNewtypeDeriving,
        MultiParamTypeClasses,
        RankNTypes,
        ScopedTypeVariables,
        TypeApplications,
        TypeOperators
    build-depends:
        base,
        transformers >=0.5
    hs-source-dirs:   src
    default-language: Haskell2010
