cabal-version:      2.4
name:               Cea
version:            0.1.0.0
synopsis:           Generic marshalling between C-pointer and Haskell data types

-- description:
-- bug-reports:
-- license:
author:             mmzk1526
maintainer:         yc4120@ic.ac.uk
extra-source-files: CHANGELOG.md


test-suite cea-test
    ghc-options:
        -O0
    main-is: Spec.hs
    type:             exitcode-stdio-1.0
    other-modules:
        Cea.Array,
        Cea.Pointer,
        Cea.Pointer.Accessor,
        Cea.Pointer.Unsafe,
        Cea.Utils.Symbol2Nat
    default-extensions:
        BlockArguments,
        DataKinds,
        DefaultSignatures,
        DeriveAnyClass,
        DeriveGeneric,
        DerivingVia,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        InstanceSigs,
        KindSignatures,
        GeneralizedNewtypeDeriving,
        RankNTypes,
        ScopedTypeVariables,
        TypeApplications,
        TypeFamilies,
        TypeOperators,
        UndecidableInstances
    build-depends:
        array ^>=0.5,
        base,
        hspec ^>=2.11,
        transformers ^>=0.6
    hs-source-dirs:
        src
        test
    default-language: Haskell2010


executable cea
    ghc-options:
        -O2
    main-is: Main.hs
    other-modules:
        Cea.Array,
        Cea.Pointer,
        Cea.Pointer.Accessor,
        Cea.Pointer.Unsafe,
        Cea.Utils.Symbol2Nat
    default-extensions:
        BlockArguments,
        DataKinds,
        DefaultSignatures,
        DeriveAnyClass,
        DeriveGeneric,
        DerivingVia,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        InstanceSigs,
        KindSignatures,
        GeneralizedNewtypeDeriving,
        NoStarIsType,
        RankNTypes,
        ScopedTypeVariables,
        TypeApplications,
        TypeFamilies,
        TypeOperators,
        UndecidableInstances
    build-depends:
        Cea,
        array ^>=0.5,
        base,
        criterion,
        transformers ^>=0.6
    hs-source-dirs:   src
    default-language: Haskell2010


library
    exposed-modules:
        Cea.Array,
        Cea.Pointer,
        Cea.Pointer.Accessor,
        Cea.Pointer.Unsafe
    other-modules:
        Cea.Utils.Symbol2Nat
    default-extensions:
        BlockArguments,
        DataKinds,
        DefaultSignatures,
        DeriveAnyClass,
        DeriveGeneric,
        DerivingVia,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        InstanceSigs,
        KindSignatures,
        GeneralizedNewtypeDeriving,
        NoStarIsType,
        RankNTypes,
        ScopedTypeVariables,
        TypeApplications,
        TypeFamilies,
        TypeOperators,
        UndecidableInstances
    build-depends:
        array ^>=0.5,
        base,
        transformers ^>=0.6
    hs-source-dirs:   src
    default-language: Haskell2010
